--- a/frontend/src/app/Components/login/login.component.css
+++ b/frontend/src/app/Components/login/login.component.css
@@ -68,7 +68,7 @@ input{
     border-radius: 5px;
     font-size: medium;
     font-weight: 500;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color:rgba(255, 255, 255, 0.1); 
     color: white;
     border: var(--border-white);
 }
@@ -109,8 +109,9 @@ input::placeholder {
     width: auto;
     max-width: 50%;
     font-weight: 600;
-    border-radius: 3px;
+    border-radius: 8px;
     transition: right 0.3s ease-out;
+    z-index: 3;
 }
 
 .no-visible{    
@@ -142,5 +143,8 @@ input::placeholder {
 @media (max-width: 490px){
     #loginContent{
         width: 80%;
+    }
+    #alert{
+        max-width: 65%;
     }
 }
