--- a/frontend/src/app/Components/pagina-inicio/clientes/dar-alta/dar-alta.component.css
+++ b/frontend/src/app/Components/pagina-inicio/clientes/dar-alta/dar-alta.component.css
@@ -1,8 +1,70 @@
 :host{
     --blue: #0059c5;
+    --light-blue: #358cf7;
+    --box-shadow: 0px 0px 1.5px 1px rgba(190, 190, 190, 0.65);
 }
 
 *,html{
     color: black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#body{
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+span{
+    color: var(--blue);
+}
+
+select{
+    cursor: pointer;
+}
+
+#form{
+    width: 80%;
+    height: auto;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    box-shadow: var(--box-shadow);
+    border-radius: 5px;
+    padding: 3.5% 5%;
+}
+
+button{
+    background-color: var(--light-blue);
+    border: var(--border-white);
+    border-radius: 10px;
+    font-weight: 700;
+    color: white;
+}
+
+#clientType{
+    width: auto;
+}
+
+.border-red i, .border-red input{
+    border: 1px solid red;
+}
+
+.border-blue i, .border-blue input{
+    border: 1px solid var(--blue);
+}
+
+.border-red i, .border-blue i{
+    border-right: 0;
+}
+
+.border-red input, .border-blue input{
+    border-left: 0;
 }
