--- a/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.html
+++ b/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.html
@@ -40,7 +40,8 @@
         </header>
         <div id="inicio">
             <h1 *ngIf="!dentroSeccion">¡Bienvenido de nuevo <strong>{{username}}</strong>!</h1>
-            <app-dar-alta *ngIf="opcion == 1"></app-dar-alta>
+            <app-dar-alta class="w-100 h-100" *ngIf="opcion == 1"></app-dar-alta>
+            <app-insertar-pedido class="w-100 h-100" *ngIf="opcion == 2"></app-insertar-pedido>
         </div>
     </section>
 </div>
