--- a/frontend/src/app/Components/pagina-inicio/clientes/insertar-pedido/insertar-pedido.component.css
+++ b/frontend/src/app/Components/pagina-inicio/clientes/insertar-pedido/insertar-pedido.component.css
@@ -34,14 +34,14 @@ span{
     background-color: rgb(230, 230, 230);
     border-radius: 5px;
     border: 2px solid white;
-    margin: 0 5%;
+    margin-right: 5%;
 }
 
 #buscador select{
     background-color: rgb(230, 230, 230);
     border-radius: 5px;
     border: 2px solid white;
-    margin: 0 5%;
+    margin-right: 5%;
 }
 
 select{
@@ -88,6 +88,7 @@ select{
     height: auto;
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden;
     flex-direction: row;
     border-bottom: 1px solid black;
 }
@@ -115,7 +116,7 @@ select{
     border-bottom: 0;
 }
 
-#clientType{
+#clientType, #selectName, #selectPackaging{
     width: auto;
 }
 
@@ -137,6 +138,52 @@ select{
     background-color: white;
     color: black;
     border: 0;
+    margin-bottom: 5%;
+}
+
+#buscador .bi.bi-trash{
+    background-color: transparent;
+    font-weight: 700;
+    color: black;
+    margin-right: 10%;
+}
+
+#resultado button.bi.bi-plus-circle-dotted{
+    height: 100%;
+    background-color: transparent;
+    font-weight: 700;
+    color: red;
+    font-size: large;
+    margin-left: 1%;
+    transform: rotate(45deg);
+}
+
+#insertOrder{
+    width: fit-content;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 1%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+
+.insert{
+    background-color: var(--light-blue);
+    border: 1px solid white;
+    color: white;
+    cursor: pointer;
+    transition: all 0.13s ease-in-out;
+}
+
+.insert:hover{
+    background-color: var(--blue);
+}
+
+.no-insert{
+    background-color: transparent;
+    border: 1px solid black;
+    color: black;
+    cursor: default;
 }
 
 .border-red i, .border-red input{
