--- a/frontend/src/app/Components/pagina-inicio/clientes/insertar-pedido/insertar-pedido.component.html
+++ b/frontend/src/app/Components/pagina-inicio/clientes/insertar-pedido/insertar-pedido.component.html
@@ -1,8 +1,8 @@
 <div id="body">
     <div class="pb-4" *ngIf="!clientSelected">
         <div id="buscador" class="d-flex justify-content-between">
-            <div class="d-flex justify-content-center">
-                <input id="input1" (input)="cambiaValor(1)"  [(ngModel)]="name" type="text" placeholder="Nombre cliente">
+            <div class="d-flex">
+                <input id="input1" (input)="cambiaValor(1)" [(ngModel)]="name" type="text" placeholder="Nombre cliente">
                 <select id="clientType" [(ngModel)]="clientType" name="clientType" class="form-control" required>
                     <option *ngFor="let type of clientTypes" [value]="type">↓ {{ type }}</option>
                 </select>
@@ -20,5 +20,25 @@
     </div>
     <div id="clientSelected" *ngIf="clientSelected">
         <button (click)="this.clientSelected = false;">Cliente: <strong>{{ client.name }}</strong><i class="bi bi-x"></i></button>
+    </div>
+    <div *ngIf="clientSelected" id="buscador" class="d-flex justify-content-between">
+        <div class="d-flex">
+            <select id="selectName" [(ngModel)]="productName" name="selectName" class="form-control" (change)="onProductChange(1, $event)" required>
+                <option *ngFor="let name of avaliableNames" [value]="name">↓ {{ name }}</option>
+            </select>
+            <select id="selectPackaging" [(ngModel)]="productPackaging" name="selectPackaging" class="form-control" (change)="onProductChange(2, $event)" required>
+                <option *ngFor="let packaging of avaliablePackagings" [value]="packaging">↓ {{ packaging }}</option>
+            </select>
+        </div>
+        <button (click)="resetFilters()" class="bi bi-trash"></button>
+        <button (click)="insertProduct()" class="bi bi-search"></button>
+    </div>
+    <button (click)="insertOrder()" [ngClass]="insertProducts ? 'insert' : 'no-insert'" id="insertOrder" *ngIf="clientSelected">Agregar Pedido</button>
+    <div *ngIf="clientSelected" id="resultados">
+        <div *ngFor="let product of finalProducts" id="resultado">
+            <button class="bi bi-plus-circle-dotted" (click)="deleteProduct(product)"></button>
+            <label><strong>{{ product.name }}, {{ product.packaging }}</strong></label>
+            <div class="d-flex p-2 justify-content-center align-items-center">Cantidad: <input min="1" [(ngModel)]="product.quantity" type="number" name="cantidad" id="cantidad"></div>
+        </div>
     </div>
 </div>
