--- a/frontend/src/app/Components/pagina-inicio/clientes/insertar-pedido/insertar-pedido.component.html
+++ b/frontend/src/app/Components/pagina-inicio/clientes/insertar-pedido/insertar-pedido.component.html
@@ -1,4 +1,5 @@
 <div id="body">
+    <h3><span>Insertar pedido</span></h3>
     <div class="pb-4" *ngIf="!clientSelected">
         <div id="buscador" class="d-flex justify-content-between">
             <div class="d-flex">
