--- a/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.html
+++ b/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.html
@@ -47,6 +47,7 @@
         <div id="inicio">
             <h1 *ngIf="!dentroSeccion">¡Bienvenido de nuevo <strong>{{username}}</strong>!</h1>
             <app-dar-alta class="w-100 h-100" *ngIf="opcion == 1"></app-dar-alta>
+            <app-discounts class="w-100 h-100" *ngIf="opcion == 2"></app-discounts>
             <app-insertar-pedido class="w-100 h-100" *ngIf="opcion == 4"></app-insertar-pedido>
             <app-lista-facturas class="w-100 h-100" *ngIf="opcion == 5"></app-lista-facturas>
         </div>
