Responsive en todo y componente funcional de modificar productos

--- a/frontend/src/app/Components/pagina-inicio/clientes/discounts/discounts.component.css
+++ b/frontend/src/app/Components/pagina-inicio/clientes/discounts/discounts.component.css
@@ -24,7 +24,8 @@ span{
 
 #buscador{
     margin-top: 5%;
-    width: 400px;
+    width: auto;
+    max-width: 400px;
     border-radius: 5px;
     background-color: white;
     box-shadow: var(--box-shadow);
