--- a/frontend/src/app/Components/pagina-inicio/lista-facturas/lista-facturas.component.html
+++ b/frontend/src/app/Components/pagina-inicio/lista-facturas/lista-facturas.component.html
@@ -33,11 +33,11 @@
         <div *ngFor="let invoice of invoices; let i = index" id="resultado2">
             <button (click)="downloadInvoice(invoice)" class="bi bi-file-earmark-arrow-down-fill"></button>
             <label><strong>Fecha:{{ invoice.date }}, total: {{ invoice.total }}€</strong>
-                <select id="invoiceType" [(ngModel)]="invoice.type" name="invoiceType" required>
+                <select *ngIf="rol == 'encargado'" id="invoiceType" [(ngModel)]="invoice.type" name="invoiceType" required>
                 <option *ngFor="let type of orderTypes" [value]="type">{{ type }}</option>
                 </select>
             </label>
-            <button (click)="changeInvoiceType(invoice, i)" *ngIf="invoice.type !== invoiceType">Guardar cambio</button>
+            <button (click)="changeInvoiceType(invoice, i)" *ngIf="invoice.type !== invoiceType && rol == 'encargado'">Guardar cambio</button>
         </div>
     </div>
 </div>
