--- a/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.css
+++ b/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.css
@@ -7,6 +7,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.hidden {
+    display: none;
+}
+
 #content{
     position: static;
     min-height: 100vh;
@@ -198,5 +202,15 @@ header i:last-child{
     #rightSection{
         width: 70%;
         max-width: 70%;
+    }
+}
+
+@media (max-width: 750px){
+    #rightSection{
+        width: 100%;
+        max-width: 100%;
+    }
+    header{
+        justify-content: space-between;
     }
 }
