--- a/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.html
+++ b/frontend/src/app/Components/pagina-inicio/pagina-inicio.component.html
@@ -1,11 +1,11 @@
 <div id="content">
-    <section class="d-flex flex-column justify-content-start" id="leftSection">
+    <section *ngIf="!isMobile" class="d-flex flex-column justify-content-start" id="leftSection">
         <img class="mb-4" src="../../../assets/images/logo.png" alt="" (click)="dentroSeccion = false; opcion = 0;">
         <div id="opciones" class="w-100 h-100 d-flex flex-column justify-content-start">
             <h5>Clientes</h5>
             <ul>
                 <li id="opcion1" (click)="cambiarOpcion(1)">Dar de alta un cliente</li>
-                <li id="opcion2" (click)="cambiarOpcion(2)">Descuentos de clientes</li>
+                <li *ngIf="rol == 'encargado'" id="opcion2" (click)="cambiarOpcion(2)">Descuentos de clientes</li>
             </ul>
             <h5>Productos</h5>
             <ul>
@@ -23,31 +23,26 @@
     </section>
     <section class="d-flex flex-column" id="rightSection">
         <header>
-            <i class="bi bi-box-arrow-in-left" (click)="clearToken()"></i>
-            <div class="d-flex justify-content-center align-items-center">
-                <div class="dropdown">
-                    <button class="bi bi-translate dropbtn"><label>&#9660;</label></button>
-                    <div class="dropdown-content">
-                      <a>Español</a>
-                      <a>Inglés</a>
+            <app-menu *ngIf="isMobile"></app-menu>
+            <div class="d-flex">
+                <i class="bi bi-box-arrow-in-left" (click)="clearToken()"></i>
+                <div class="d-flex justify-content-center align-items-center">
+                    <div class="dropdown">
+                        <button class="bi bi-person-circle dropbtn"></button>
+                        <div class="dropdown-content-user">
+                          <a>{{username}}</a>
+                          <hr>
+                          <a>{{rol}}</a>
+                        </div>
                     </div>
-                  </div>
-            </div>
-            <div class="d-flex justify-content-center align-items-center">
-                <div class="dropdown">
-                    <button class="bi bi-person-circle dropbtn"></button>
-                    <div class="dropdown-content-user">
-                      <a>{{username}}</a>
-                      <hr>
-                      <a>{{rol}}</a>
-                    </div>
-                  </div>
+                </div>
             </div>
         </header>
         <div id="inicio">
             <h1 *ngIf="!dentroSeccion">¡Bienvenido de nuevo <strong>{{username}}</strong>!</h1>
             <app-dar-alta class="w-100 h-100" *ngIf="opcion == 1"></app-dar-alta>
-            <app-discounts class="w-100 h-100" *ngIf="opcion == 2"></app-discounts>
+            <app-discounts class="w-100 h-100" *ngIf="opcion == 2 && rol == 'encargado'"></app-discounts>
+            <app-lista-productos class="w-100 h-100" *ngIf="opcion == 3"></app-lista-productos>
             <app-insertar-pedido class="w-100 h-100" *ngIf="opcion == 4"></app-insertar-pedido>
             <app-lista-facturas class="w-100 h-100" *ngIf="opcion == 5"></app-lista-facturas>
         </div>
